# stack-shooter-standalone

./: .gitignore  .replit  CHANGELOG.md  architecture_analysis_and_future_implementation_strategy.md  capacitor.config.ts  fix_redis_types.cjs  index.html  package-lock.json  package.json  type_errors.txt  vercel.json  vite.config.ts
.agents/: agent_assets_metadata.toml
.github/workflows/: build-android.yml  build-wasm.yml
RUST/: .gitignore  Cargo.toml  README.md  build_web.sh  cargo.toml  index.html  main.rs  vercel.json
RUST/audio/: mod.rs
RUST/config/: mod.rs  upgrades.rs
RUST/draw/: mod.rs
RUST/effects/: mod.rs
RUST/entities/: mod.rs
RUST/hud/: mod.rs
RUST/input/: mod.rs
RUST/tutorial/: mod.rs
android/app/: build.gradle
docs/: RUST_PORT_EXPLAINED.md
engine-rs/: .gitignore  Cargo.toml  README.md
engine-rs/src/: lib.rs
src/: index.css  main.jsx
src/client/: main.jsx  vite.config.ts
src/client/components/: Game.jsx
src/client/hooks/: useGameLoop.js
src/client/lib/: Boss.js  entities.js
src/components/: Controls.css  Controls.jsx  DifficultySelect.css  DifficultySelect.jsx  Game.css  Game.jsx  GameOver.css  GameOver.jsx  HUD.css  HUD.jsx  MuteButton.css  MuteButton.jsx  PauseMenu.css  PauseMenu.jsx  StartScreen.css  StartScreen.jsx  TutorialOverlay.css  TutorialOverlay.jsx  UpgradeScreen.css  UpgradeScreen.jsx
src/engine/core/: useGameLoop.js
src/engine/entities/: Boss.js  entities.js
src/engine/logic/: difficulty.js  tutorial.js  upgrades.js
src/engine/pkg/: package.json  (+4 more)
src/server/: index.ts  tsconfig.json
(+10 files in other folders)
